--- a/Proyecto_BD/Views/Home/Login.cshtml
+++ b/Proyecto_BD/Views/Home/Login.cshtml
@@ -7,7 +7,7 @@
     <div class="login-sistge">
         <hr color="white" size=10 />
         <br />
-        <h3>No estas registrado? <a asp-action="RegistrarUsuarioAlumno" style="color:white; text-decoration: none;">Registrate Aqui</a></h3>
+        <h3>No estas registrado? <a asp-action="RegistroPaciente" style="color:white; text-decoration: none;">Registrate Aqui</a></h3>
         <h3>Olvidaste tu contraseña? <a asp-action="RecuperarPassword" style="color:white; text-decoration: none;">Recuperala Aqui</a></h3>
     </div>
     <div class="login-datos">
