--- a/Proyecto_BD/Views/Tickets/Delete.cshtml
+++ b/Proyecto_BD/Views/Tickets/Delete.cshtml
@@ -18,16 +18,16 @@
             @Html.DisplayFor(model => model.Venta.ID_Ventas)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Medicina)
+            @Html.DisplayNameFor(model => model.Tipo_item)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medicina.Nombre_Medicina)
+            @Html.DisplayFor(model => model.Tipo_item)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Servicio)
+            @Html.DisplayNameFor(model => model.ID_Item)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Servicio.Descripcion)
+            @Html.DisplayFor(model => model.ID_Item)
         </dd>
     </dl>
     
