--- a/Proyecto_BD/Views/Tickets/Edit.cshtml
+++ b/Proyecto_BD/Views/Tickets/Edit.cshtml
@@ -18,15 +18,15 @@
                 <select asp-for="ID_Venta" class="form-control" asp-items="ViewBag.ID_Venta"></select>
                 <span asp-validation-for="ID_Venta" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ID_Medicina" class="control-label"></label>
-                <select asp-for="ID_Medicina" class="form-control" asp-items="ViewBag.ID_Medicina"></select>
-                <span asp-validation-for="ID_Medicina" class="text-danger"></span>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Tipo_item" /> @Html.DisplayNameFor(model => model.Tipo_item)
+                </label>
             </div>
             <div class="form-group">
-                <label asp-for="ID_Servicio" class="control-label"></label>
-                <select asp-for="ID_Servicio" class="form-control" asp-items="ViewBag.ID_Servicio"></select>
-                <span asp-validation-for="ID_Servicio" class="text-danger"></span>
+                <label asp-for="ID_Item" class="control-label"></label>
+                <input asp-for="ID_Item" class="form-control" />
+                <span asp-validation-for="ID_Item" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
