--- a/Proyecto_BD/Views/Tickets/Create.cshtml
+++ b/Proyecto_BD/Views/Tickets/Create.cshtml
@@ -16,13 +16,14 @@
                 <label asp-for="ID_Venta" class="control-label"></label>
                 <select asp-for="ID_Venta" class ="form-control" asp-items="ViewBag.ID_Venta"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="ID_Medicina" class="control-label"></label>
-                <select asp-for="ID_Medicina" class ="form-control" asp-items="ViewBag.ID_Medicina"></select>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Tipo_item" /> @Html.DisplayNameFor(model => model.Tipo_item)
+                </label>
             </div>
             <div class="form-group">
-                <label asp-for="ID_Servicio" class="control-label"></label>
-                <select asp-for="ID_Servicio" class ="form-control" asp-items="ViewBag.ID_Servicio"></select>
+                <label asp-for="ID_Item" class="control-label"></label>
+                <select asp-for="ID_Item" class="form-control" asp-items="ViewBag.ID_Servicio"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
