--- a/Proyecto_BD/Views/Jornadas/Delete.cshtml
+++ b/Proyecto_BD/Views/Jornadas/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Hora_Salida)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.descripcion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.descripcion)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
