--- a/Proyecto_BD/Views/Medicos/Details.cshtml
+++ b/Proyecto_BD/Views/Medicos/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Jornada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Jornada.ID_Jornada)
+            @Html.DisplayFor(model => model.Jornada.descripcion)
         </dd>
     </dl>
 </div>
