--- a/Proyecto_BD/Views/Medicos/Index.cshtml
+++ b/Proyecto_BD/Views/Medicos/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Consultorio.Numero_Consultorio)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Jornada.ID_Jornada)
+                @Html.DisplayFor(modelItem => item.Jornada.descripcion)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID_Medico">Edit</a> |
