--- a/Proyecto_BD/Views/Jornadas/Edit.cshtml
+++ b/Proyecto_BD/Views/Jornadas/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Hora_Salida" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="descripcion" class="control-label"></label>
+                <input asp-for="descripcion" class="form-control" />
+                <span asp-validation-for="descripcion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
