--- a/Proyecto_BD/Views/Jornadas/Index.cshtml
+++ b/Proyecto_BD/Views/Jornadas/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Hora_Salida)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.descripcion)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Hora_Salida)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.descripcion)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID_Jornada">Edit</a> |
