--- a/Proyecto_BD/Views/Medicos/Create.cshtml
+++ b/Proyecto_BD/Views/Medicos/Create.cshtml
@@ -13,8 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ID_Usuario" class="control-label"></label>
-                <select asp-for="ID_Usuario" class ="form-control" asp-items="ViewBag.ID_Usuario"></select>
+                <input asp-for="ID_Usuario" class="form-control" type="hidden" value="@ViewData["ID_Usuario"]" />
             </div>
             <div class="form-group">
                 <label asp-for="Cedula" class="control-label"></label>
