--- a/Proyecto_BD/Views/Recepcionistas/Create.cshtml
+++ b/Proyecto_BD/Views/Recepcionistas/Create.cshtml
@@ -12,9 +12,8 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ID_Usuario" class="control-label"></label>
-                <select asp-for="ID_Usuario" class ="form-control" asp-items="ViewBag.ID_Usuario"></select>
+            <div class="form-group">               
+                <input asp-for="ID_Usuario" type="hidden" value="@ViewData["ID_Usuario"]" />
             </div>
             <div class="form-group">
                 <label asp-for="ID_Jornada" class="control-label"></label>
