--- a/Proyecto_BD/Views/Medicos/Details.cshtml
+++ b/Proyecto_BD/Views/Medicos/Details.cshtml
@@ -14,7 +14,25 @@
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Apellido_Materno)
+            @(Model?.Usuario?.Nombre + " " + Model?.Usuario?.Apellido_Paterno + " " + Model?.Usuario?.Apellido_Materno)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Correo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.Correo)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Fecha_Nacimiento)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.Fecha_Nacimiento)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.CURP)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.CURP)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cedula)
@@ -27,6 +45,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Especialidad.Descripcion)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Especialidad.PrecioCita)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Especialidad.PrecioCita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Consultorio)
@@ -43,6 +67,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID_Medico">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Medico">Modificar Datos</a>
 </div>
