--- a/Proyecto_BD/Views/Shared/_Layout.cshtml
+++ b/Proyecto_BD/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tipousuarios" asp-action="Index">Tipo de Usuarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Salir</a>
                         </li>
                     </ul>
                 </div>
