--- a/Proyecto_BD/Views/Consultorios/Delete.cshtml
+++ b/Proyecto_BD/Views/Consultorios/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Numero_Consultorio)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Disponible)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Disponible)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
