--- a/Proyecto_BD/Views/Consultorios/Create.cshtml
+++ b/Proyecto_BD/Views/Consultorios/Create.cshtml
@@ -22,6 +22,11 @@
                 <input asp-for="Numero_Consultorio" class="form-control" />
                 <span asp-validation-for="Numero_Consultorio" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Disponible" /> @Html.DisplayNameFor(model => model.Disponible)
+                </label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
