--- a/Proyecto_BD/Views/Consultorios/Details.cshtml
+++ b/Proyecto_BD/Views/Consultorios/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Numero_Consultorio)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Disponible)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Disponible)
+        </dd>
     </dl>
 </div>
 <div>
