--- a/Proyecto_BD/Views/Consultorios/Index.cshtml
+++ b/Proyecto_BD/Views/Consultorios/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Numero_Consultorio)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Disponible)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Numero_Consultorio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Disponible)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID_Consultorio">Edit</a> |
