--- a/Proyecto_BD/Views/Recepcionistas/Details.cshtml
+++ b/Proyecto_BD/Views/Recepcionistas/Details.cshtml
@@ -14,17 +14,34 @@
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Apellido_Materno)
+            @(Model?.Usuario?.Nombre + " " + Model?.Usuario?.Apellido_Paterno + " " + Model?.Usuario?.Apellido_Materno)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Correo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.Correo)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.Fecha_Nacimiento)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.Fecha_Nacimiento)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Usuario.CURP)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Usuario.CURP)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Jornada)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Jornada.ID_Jornada)
+            @Html.DisplayFor(model => model.Jornada.descripcion)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID_Recepcionista">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Recepcionista">Modificar Datos</a>
 </div>
