--- a/Proyecto_BD/Views/Recepcionistas/Details.cshtml
+++ b/Proyecto_BD/Views/Recepcionistas/Details.cshtml
@@ -44,4 +44,6 @@
 </div>
 <div>
     <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Recepcionista">Modificar Datos</a>
+    <a asp-action="EditarJornadas">Administrar Jornadas</a>
+    <a asp-action="EditarConsultorios">Administrar Consultorios</a>
 </div>
