--- a/Proyecto_BD/Views/Jornadas/Index.cshtml
+++ b/Proyecto_BD/Views/Jornadas/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a asp-action="AsignarJornada">Asignar Jornada</a>
 </p>
 <table class="table">
     <thead>
