Tickets actualizados principalmente, pero tambien se arreglo jornadas y horarios

--- a/Proyecto_BD/Views/Recepcionistas/Details.cshtml
+++ b/Proyecto_BD/Views/Recepcionistas/Details.cshtml
@@ -46,4 +46,7 @@
     <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Recepcionista">Modificar Datos</a>
     <a asp-action="EditarJornadas">Administrar Jornadas</a>
     <a asp-action="EditarConsultorios">Administrar Consultorios</a>
+    <a asp-action="AdministrarFarmacia">Administrar Farmacia</a>
+    <a asp-action="AdministrarServicios">Administrar Servicios</a>
+    <a asp-action="AdministrarVentas">Administrar Venta</a>
 </div>
