--- a/Proyecto_BD/Views/Tickets/Edit.cshtml
+++ b/Proyecto_BD/Views/Tickets/Edit.cshtml
@@ -29,6 +29,16 @@
                 <span asp-validation-for="ID_Item" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Cantidad" class="control-label"></label>
+                <input asp-for="Cantidad" class="form-control" />
+                <span asp-validation-for="Cantidad" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subtotal" class="control-label"></label>
+                <input asp-for="Subtotal" class="form-control" />
+                <span asp-validation-for="Subtotal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
