--- a/Proyecto_BD/Views/Tickets/Index.cshtml
+++ b/Proyecto_BD/Views/Tickets/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AgregarServicio">Agregar Servicio</a>
+    <a asp-action="AgregarMedicina">Agregar Medicina</a>
 </p>
 <table class="table">
     <thead>
@@ -20,6 +21,12 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ID_Item)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cantidad)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Subtotal)
             </th>
             <th></th>
         </tr>
@@ -37,6 +44,12 @@
 					@(item.Tipo_item == true 
                                     ? item.Medicina?.Nombre_Medicina
 									: item.Servicio?.Descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cantidad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Subtotal)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID_Ticket">Edit</a> |
