Se hizo el ajuste para servicios

--- a/Proyecto_BD/Views/Ventas/Index.cshtml
+++ b/Proyecto_BD/Views/Ventas/Index.cshtml
@@ -7,7 +7,9 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <form asp-action="Create">
+        <input type="submit" value="Registar Venta" class="btn btn-success"/>
+    </form>
 </p>
 <table class="table">
     <thead>
