--- a/Proyecto_BD/Views/Citas/Create.cshtml
+++ b/Proyecto_BD/Views/Citas/Create.cshtml
@@ -31,9 +31,8 @@
                 <span asp-validation-for="Fecha_Cita" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Hora_Cita" class="control-label"></label>
-                <input asp-for="Hora_Cita" class="form-control" />
-                <span asp-validation-for="Hora_Cita" class="text-danger"></span>
+                <label asp-for="ID_Cita_Horario" class="control-label"></label>
+                <select asp-for="ID_Cita_Horario" class ="form-control" asp-items="ViewBag.ID_Cita_Horario"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ID_Estatus_Cita" class="control-label"></label>
