--- a/Proyecto_BD/Views/Citas/Delete.cshtml
+++ b/Proyecto_BD/Views/Citas/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Fecha_Cita)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Hora_Cita)
+            @Html.DisplayNameFor(model => model.CitasHorario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Hora_Cita)
+            @Html.DisplayFor(model => model.CitasHorario.ID_Horario)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EstatusCita)
