--- a/Proyecto_BD/Views/Pacientes/Details.cshtml
+++ b/Proyecto_BD/Views/Pacientes/Details.cshtml
@@ -62,4 +62,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID_Paciente">Modificar Datos</a>
+    <a asp-action="AgendarCita">Agendar Cita</a>
 </div>
