--- a/Proyecto_BD/Views/Citas/Create.cshtml
+++ b/Proyecto_BD/Views/Citas/Create.cshtml
@@ -12,31 +12,44 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            
             <div class="form-group">
-                <label asp-for="ID_Paciente" class="control-label"></label>
-                <select asp-for="ID_Paciente" class ="form-control" asp-items="ViewBag.ID_Paciente"></select>
+                <input asp-for="ID_Paciente" type="hidden"/>
             </div>
+
+            <!-- Especialidad -->
+            <div class="form-group">
+                <label>Especialidad</label>
+                <select id="especialidadSelect" class="form-control">
+                    <option value="">Seleccione una Especialidad</option>
+                    @foreach (var esp in ViewBag.Especialidades as SelectList)
+                    {
+						<option value="@esp.Value">@esp.Text</option>
+                    }
+                </select>
+            </div>
+
+            <!-- Medico -->
             <div class="form-group">
                 <label asp-for="ID_Medico" class="control-label"></label>
-                <select asp-for="ID_Medico" class ="form-control" asp-items="ViewBag.ID_Medico"></select>
+                <select asp-for="ID_Medico" class ="form-control" id="medicoSelect">
+                    <option value="">Seleccione un Medico</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label asp-for="Fecha_Registro" class="control-label"></label>
-                <input asp-for="Fecha_Registro" class="form-control" />
-                <span asp-validation-for="Fecha_Registro" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Fecha_Cita" class="control-label"></label>
-                <input asp-for="Fecha_Cita" class="form-control" />
+                <input asp-for="Fecha_Cita" class="form-control"  id="fechaCita" type="date"
+                       min="@DateTime.Now.AddDays(1).ToString("yyyy-MM-dd")"
+                       max="@DateTime.Now.AddMonths(3).ToString("yyyy-MM-dd")" />
                 <span asp-validation-for="Fecha_Cita" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="ID_Cita_Horario" class="control-label"></label>
-                <select asp-for="ID_Cita_Horario" class ="form-control" asp-items="ViewBag.ID_Cita_Horario"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ID_Estatus_Cita" class="control-label"></label>
-                <select asp-for="ID_Estatus_Cita" class ="form-control" asp-items="ViewBag.ID_Estatus_Cita"></select>
+                <select asp-for="ID_Cita_Horario" class ="form-control" id="horarioSelect">
+                    <option value="">Seleccione un Horario</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -51,4 +64,49 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $('#especialidadSelect').on('change', function () {
+            let idEspecialidad = $(this).val();
+            $('#medicoSelect').empty().append('<option>Cargando.....</option>');
+
+            $.getJSON('/Citas/GetMedicosPorEspecialidad', { idEspecialidad: idEspecialidad }, function (data) {
+                $('#medicoSelect').empty().append('<option value="">Seleccione un Médico</option>');
+                $.each(data, function (i, item) {
+                    $('#medicoSelect').append($('<option>', {
+                        value: item.value,
+                        text: item.text
+                    }));
+                });
+            })
+            .fail(function (jqXHR, textStatus, errorThrown) {
+                alert("Error al obtener médicos: " + errorThrown);
+                console.log("Detalles:", jqXHR.responseText);
+            });
+        });
+
+
+        $('#medicoSelect, #fechaCita').on('change', function() {
+			let idMedico = $('#medicoSelect').val();
+			let fecha = $('#fechaCita').val();
+
+            if(idMedico && fecha){
+				$('#horarioSelect').empty().append('<option>Cargando.....</option>');
+
+				$.getJSON('/Citas/GetHorariosDisponibles', { idMedico: idMedico, fecha: fecha }, function(data){
+					$('#horarioSelect').empty().append('<option value="">Seleccione un Horario</option>');
+					$.each(data, function(i, item){
+						$('#horarioSelect').append($('<option>', {
+							value: item.value,
+							text: item.text
+                        }));
+				    });
+                })
+                .fail(function (jqXHR, textStatus, errorThrown) {
+                alert("Error al obtener médicos: " + errorThrown);
+                console.log("Detalles:", jqXHR.responseText);
+                });
+            }
+		});
+    </script>
 }
