--- a/Proyecto_BD/Views/CitasHorarios/Create.cshtml
+++ b/Proyecto_BD/Views/CitasHorarios/Create.cshtml
@@ -17,6 +17,11 @@
                 <input asp-for="Hora_Cita" class="form-control" />
                 <span asp-validation-for="Hora_Cita" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="JornadaHorario" /> @Html.DisplayNameFor(model => model.JornadaHorario)
+                </label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
