--- a/Proyecto_BD/Views/CitasHorarios/Delete.cshtml
+++ b/Proyecto_BD/Views/CitasHorarios/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Hora_Cita)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.JornadaHorario)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.JornadaHorario)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
