--- a/Proyecto_BD/Views/CitasHorarios/Details.cshtml
+++ b/Proyecto_BD/Views/CitasHorarios/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Hora_Cita)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.JornadaHorario)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.JornadaHorario)
+        </dd>
     </dl>
 </div>
 <div>
