Demasiadas cosas, pero funcionan, mas que nada de pagos y citas en general

--- a/Proyecto_BD/Views/Medicos/Delete.cshtml
+++ b/Proyecto_BD/Views/Medicos/Delete.cshtml
@@ -45,6 +45,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID_Medico" />
+        @if (TempData["CitaPendiente"] != null)
+        {
+            <div class="alert alert-danger">@TempData["CitaPendiente"]</div>
+        }
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
