--- a/Proyecto_BD/Views/Medicos/Details.cshtml
+++ b/Proyecto_BD/Views/Medicos/Details.cshtml
@@ -68,4 +68,7 @@
 </div>
 <div>
     <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Medico">Modificar Datos</a>
+    <a asp-action="VerCitas">Ver Citas</a>
 </div>
+
+
