--- a/Proyecto_BD/Views/Citas/Index.cshtml
+++ b/Proyecto_BD/Views/Citas/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -37,10 +34,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Paciente.Alergia)
+                @Html.DisplayFor(modelItem => item.Paciente.Usuario.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Medico.Cedula)
+                @Html.DisplayFor(modelItem => item.Medico.Usuario.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fecha_Registro)
@@ -54,11 +51,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EstatusCita.Estatus_Cita)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Cita">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Cita">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Cita">Delete</a>
-            </td>
+            
+            @if (TempData["TipoUsuario"] == null)
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID_Cita">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID_Cita">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID_Cita">Delete</a>
+                </td>
+            }       
         </tr>
 }
     </tbody>
