--- a/Proyecto_BD/Views/Pacientes/Details.cshtml
+++ b/Proyecto_BD/Views/Pacientes/Details.cshtml
@@ -63,4 +63,6 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID_Paciente">Modificar Datos</a>
     <a asp-action="AgendarCita">Agendar Cita</a>
+    <a asp-action="RealizarPago">Realizar Pago</a>
+    <a asp-action="VerCitas">Historial de Citas</a>
 </div>
