--- a/Proyecto_BD/Views/Tickets/AgregarMedicina.cshtml
+++ b/Proyecto_BD/Views/Tickets/AgregarMedicina.cshtml
@@ -17,6 +17,10 @@
                 <select asp-for="ID_Item" class="form-control" asp-items="ViewBag.ID_Medicina"></select>
             </div>
             <div class="form-group">
+                @if (TempData["Error"] != null)
+                {
+                    <div class="alert alert-danger">@TempData["Error"]</div>
+                }
                 <label asp-for="Cantidad" class="control-label"></label>
                 <input asp-for="Cantidad" class="form-control" />
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
