--- a/Proyecto_BD/Views/Recepcionistas/Details.cshtml
+++ b/Proyecto_BD/Views/Recepcionistas/Details.cshtml
@@ -49,4 +49,5 @@
     <a asp-action="AdministrarFarmacia">Administrar Farmacia</a>
     <a asp-action="AdministrarServicios">Administrar Servicios</a>
     <a asp-action="AdministrarVentas">Administrar Venta</a>
+    <a asp-action="RegistrarEmpleado">Agregar Empleado</a>
 </div>
