--- a/Proyecto_BD/Views/Recetas/Create.cshtml
+++ b/Proyecto_BD/Views/Recetas/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="ID_Cita" class="control-label"></label>
                 <select asp-for="ID_Cita" class ="form-control" asp-items="ViewBag.ID_Cita"></select>
             </div>
@@ -22,7 +22,7 @@
                 <span asp-validation-for="Diagnostico" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agregar Tratamiento" class="btn btn-primary" />
             </div>
         </form>
     </div>
