--- a/Proyecto_BD/Views/Medicos/Details.cshtml
+++ b/Proyecto_BD/Views/Medicos/Details.cshtml
@@ -69,6 +69,7 @@
 <div>
     <a asp-action="EditarDatos" asp-route-id="@Model?.ID_Medico">Modificar Datos</a>
     <a asp-action="VerCitas">Ver Citas</a>
+    <a asp-action="VerRecetas">Ver Recetas</a>
 </div>
 
 
