--- a/Proyecto_BD/Views/Citas/Delete.cshtml
+++ b/Proyecto_BD/Views/Citas/Delete.cshtml
@@ -15,19 +15,13 @@
             @Html.DisplayNameFor(model => model.Paciente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paciente.Alergia)
+            @Html.DisplayFor(model => model.Paciente.Usuario.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Medico)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medico.Cedula)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fecha_Registro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha_Registro)
+            @Html.DisplayFor(model => model.Medico.Usuario.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha_Cita)
@@ -39,13 +33,7 @@
             @Html.DisplayNameFor(model => model.CitasHorario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CitasHorario.ID_Horario)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstatusCita)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstatusCita.Estatus_Cita)
+            @Html.DisplayFor(model => model.CitasHorario.Hora_Cita)
         </dd>
     </dl>
     
