--- a/Proyecto_BD/Views/Tratamientos/Create.cshtml
+++ b/Proyecto_BD/Views/Tratamientos/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="ID_Receta" class="control-label"></label>
                 <select asp-for="ID_Receta" class ="form-control" asp-items="ViewBag.ID_Receta"></select>
             </div>
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="RegistrarTratamiento">Back to List</a>
 </div>
 
 @section Scripts {
