--- a/Proyecto_BD/Views/Medicinas/Index.cshtml
+++ b/Proyecto_BD/Views/Medicinas/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success">Agregar Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Nombre_Medicina)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Medicina">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Medicina">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Medicina">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.ID_Medicina" class="btn btn-primary">Editar Unidades</a>
             </td>
         </tr>
 }
