--- a/Proyecto_BD/Views/Citas/Create.cshtml
+++ b/Proyecto_BD/Views/Citas/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Cita</h4>
+<h4>Agendar Cita</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -52,7 +50,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agendar" class="btn btn-primary" />
             </div>
         </form>
     </div>
