--- a/Proyecto_BD/Views/Citas/Index.cshtml
+++ b/Proyecto_BD/Views/Citas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Citas</h1>
 
 @if (TempData["TipoUsuario"].ToString() == "Paciente")
 {
@@ -94,7 +94,8 @@
                 @if ((TempData["TipoUsuario"].ToString() == "Paciente" || TempData["TipoUsuario"] == null) && ((item.Fecha_Cita - DateTime.Now).TotalSeconds > 0) && item.ID_Estatus_Cita < 3)
                 {
                     <td>
-                        <a asp-action="Delete" asp-route-id="@item.ID_Cita">Cancelar</a>
+                        <a asp-action="Delete" asp-route-id="@item.ID_Cita" class="btn btn-danger">Cancelar</a>
+
                     </td>
                 }
 
