--- a/Proyecto_BD/Views/Consultorios/Index.cshtml
+++ b/Proyecto_BD/Views/Consultorios/Index.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Consultorios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
-    <a asp-action="AsignarConsultorio">Asignar Consultorio</a>
+    <a asp-action="AsignarConsultorio" class="btn btn-primary">Asignar Consultorio</a>
 </p>
 <table class="table">
     <thead>
@@ -18,9 +17,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Numero_Consultorio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Disponible)
             </th>
             <th></th>
         </tr>
@@ -33,14 +29,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Numero_Consultorio)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Disponible)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Consultorio">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Consultorio">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Consultorio">Delete</a>
             </td>
         </tr>
 }
