--- a/Proyecto_BD/Views/Jornadas/Index.cshtml
+++ b/Proyecto_BD/Views/Jornadas/Index.cshtml
@@ -7,8 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
-    <a asp-action="AsignarJornada">Asignar Jornada</a>
+    <a asp-action="AsignarJornada" class="btn btn-warning">Asignar Jornada</a>
 </p>
 <table class="table">
     <thead>
@@ -36,11 +35,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.descripcion)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Jornada">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Jornada">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Jornada">Delete</a>
             </td>
         </tr>
 }
