--- a/Proyecto_BD/Views/Medicinas/Create.cshtml
+++ b/Proyecto_BD/Views/Medicinas/Create.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
 <h4>Medicina</h4>
 <hr />
 <div class="row">
@@ -28,14 +26,14 @@
                 <span asp-validation-for="Nombre_Medicina" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar</a>
 </div>
 
 @section Scripts {
