--- a/Proyecto_BD/Views/Medicinas/Edit.cshtml
+++ b/Proyecto_BD/Views/Medicinas/Edit.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Medicina</h4>
 <hr />
 <div class="row">
@@ -13,6 +11,11 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID_Medicina" />
+            <div class="form-group">
+                <label asp-for="Nombre_Medicina" class="control-label"></label>
+                <input asp-for="Nombre_Medicina" class="form-control" />
+                <span asp-validation-for="Nombre_Medicina" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Cantidad" class="control-label"></label>
                 <input asp-for="Cantidad" class="form-control" />
@@ -24,19 +27,14 @@
                 <span asp-validation-for="Precio_Medicina" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nombre_Medicina" class="control-label"></label>
-                <input asp-for="Nombre_Medicina" class="form-control" />
-                <span asp-validation-for="Nombre_Medicina" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar</a>
 </div>
 
 @section Scripts {
