--- a/Proyecto_BD/Views/Medicos/AsignarJornada.cshtml
+++ b/Proyecto_BD/Views/Medicos/AsignarJornada.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "AsignarJornada";
 }
 
-<h1>AsignarJornada</h1>
+<h1>Asignar Jornada</h1>
 
-<h4>Medico</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,14 +22,10 @@
                 <span asp-validation-for="ID_Jornada" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Asignar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
