--- a/Proyecto_BD/Views/Medicos/Index.cshtml
+++ b/Proyecto_BD/Views/Medicos/Index.cshtml
@@ -6,14 +6,11 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Usuario)
+                @Html.DisplayNameFor(model => model.ID_Medico)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cedula)
@@ -49,11 +46,8 @@
                 @Html.DisplayFor(modelItem => item.Jornada.descripcion)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Medico">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Medico">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Medico">Delete</a> |
-                <a asp-action="AsignarConsultorio" asp-route-id="@item.ID_Medico">Asignar Consultorio</a>
-                <a asp-action="AsignarJornada" asp-route-id="@item.ID_Medico">Asignar Jornada</a>
+                <a asp-action="AsignarConsultorio" asp-route-id="@item.ID_Medico" class="btn btn-primary me-2">Asignar Consultorio</a>
+                <a asp-action="AsignarJornada" asp-route-id="@item.ID_Medico" class="btn btn-primary">Asignar Jornada</a>
             </td>
         </tr>
 }
