--- a/Proyecto_BD/Views/Recetas/Index.cshtml
+++ b/Proyecto_BD/Views/Recetas/Index.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Recetas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -31,9 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Diagnostico)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Receta">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Receta">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Receta">Delete</a>
+                <a asp-action="VerTratamientos" asp-route-id="@item.ID_Receta">Tratamientos</a>
             </td>
         </tr>
 }
