--- a/Proyecto_BD/Views/Servicios/Edit.cshtml
+++ b/Proyecto_BD/Views/Servicios/Edit.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Servicio</h4>
 <hr />
 <div class="row">
@@ -24,14 +22,14 @@
                 <span asp-validation-for="Precio_Servicio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar</a>
 </div>
 
 @section Scripts {
