--- a/Proyecto_BD/Views/Servicios/Index.cshtml
+++ b/Proyecto_BD/Views/Servicios/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Servicios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success">Agregar Servicio</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Precio_Servicio)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID_Servicio">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID_Servicio">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID_Servicio">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.ID_Servicio" class="btn btn-primary">Editar</a>
             </td>
         </tr>
 }
