--- a/Proyecto_BD/Views/Tickets/AgregarMedicina.cshtml
+++ b/Proyecto_BD/Views/Tickets/AgregarMedicina.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Ticket</h4>
+<h4>Medicina</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,14 +24,10 @@
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
