--- a/Proyecto_BD/Views/Tickets/RegistrarVenta.cshtml
+++ b/Proyecto_BD/Views/Tickets/RegistrarVenta.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "RegistrarVenta";
 }
 
-<h1>RegistrarVenta</h1>
+<h1>Registrar Venta</h1>
 
 <p>
-    <a asp-action="AgregarServicio">Agregar Servicio</a>
-    <a asp-action="AgregarMedicina">Agregar Medicina</a>
-    <a asp-action="GenerarTicket">Generar Ticket</a>
+    <a asp-action="AgregarServicio" class="btn btn-success">Agregar Servicio</a>
+    <a asp-action="AgregarMedicina" class="btn btn-primary">Agregar Medicina</a>
+    <a asp-action="GenerarTicket" class="btn btn-info">Generar Ticket</a>
 </p>
 <table class="table">
     <thead>
