--- a/Proyecto_BD/Views/Home/Login.cshtml
+++ b/Proyecto_BD/Views/Home/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = null;
-    <link rel="stylesheet" href="~/css/Login.css" />
+    <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
 }
 
 <div class="login">
