--- a/Proyecto_BD/Views/Home/RecuperarPassword.cshtml
+++ b/Proyecto_BD/Views/Home/RecuperarPassword.cshtml
@@ -1,35 +1,25 @@
 ﻿@{
     Layout = null;
-    <link rel="stylesheet" href="~/css/Registro.css" />
+    <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
 }
-
-<header class="header">
-    <div class="logo">
-        <img src="~/Imagenes/logo_white_large.png" height=70>
-        <img src="~/Imagenes/gorrito.png" height=70 align="right">
-    </div>
-</header>
 
 <div class="login">
     <div class="login-sistge">
-        <img src="~/Imagenes/logo_white_large.png">
-        <hr color="white" size=10 />
+        <hr color="white" size="10" />
         <br />
-        <h3>Ya tienes cuenta? <a style="color:white; text-decoration: none;" asp-action="Login">Ingresa Aqui</a></h3>
-        <h3>No estas Registrado? <a style="color:white; text-decoration: none;" asp-action="RegistroPaciente">Registrate Aqui</a></h3>
+        <h3>Ya tienes cuenta? <a asp-action="Login" style="color:white; text-decoration: none;">Ingresa Aquí</a></h3>
+        <h3>No estás registrado? <a asp-action="RegistroPaciente" style="color:white; text-decoration: none;">Regístrate Aquí</a></h3>
     </div>
     <div class="login-datos">
-        <h2>Recuperar Contraseña</h2>
+        <h1>Recuperar Contraseña</h1>
 
         <span style="color:red">@Html.Raw(ViewBag.Message)</span>
         <span style="color:green">@Html.Raw(ViewBag.Completado)</span>
 
-        <form class="form" method="post" asp-action="RecuperarPassword" id=frmFormulario>
-            <fieldset class="email" style="border: none; padding: 0; margin: 20px 0; position: relative;">
-                <input type="email" class="form-control" name="Correo" placeholder="Correo Electrónico" required style="width: 100%; height: 48px; color: hsl(0, 0, 20); padding: 15px 40px 15px 15px; border-radius: 5px; font-size: 14px;
-                                                        outline: none!important; border: 1px solid hsla(0, 0, 0, 0.3); box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2); vertical-align: top;" />
+        <form class="form" method="post" asp-action="RecuperarPassword" id="frmFormulario">
+            <fieldset class="email">
+                <input type="email" name="Correo" required placeholder="Correo Electrónico" />
             </fieldset>
-
             <button type="submit" class="btn">Recuperar Contraseña</button>
         </form>
     </div>
